// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketReplyArea/> should block the reply area because the customer is required on ticket creation with an internal-note 1`] = `
<div
  class="component"
>
  <input
    data-testid="ticket-macro-search"
  />
  <div
    class="content"
  >
    <div
      class="replyAreaAlertMessage alert-warning"
    >
      <span>
        To create a ticket with an internal note, please
        <a
          href="https://docs.gorgias.com/ticket/internal-notes#create_a_ticket_with_an_internal_note"
          rel="noopener noreferrer"
          target="_blank"
        >
           
          set a customer
           
        </a>
        first in the infobar
      </span>
    </div>
  </div>
</div>
`;

exports[`<TicketReplyArea/> should render 1`] = `
<div
  class="component"
>
  <input
    data-testid="ticket-macro-search"
  />
  <div
    class="content"
  >
    <div>
      hello
    </div>
  </div>
</div>
`;
